# fluffless

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr-status-checks.yaml
src/fluffless/utils/: cli.py  logging.py
