[project]
name = "fluffless"
dynamic = ["version"]
description = "Lightweight Python framework for building CLI apps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "rich-argparse>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "flake8-assertive>=2.2.0",
    "flake8-docstrings>=1.7.0",
    "flake8-pyproject>=1.2.4",
    "flake8>=7.3.0",
    "pep8-naming>=0.15.1",
    "pre-commit-hooks>=6.0.0",
    "pre-commit>=4.6.0",
    "pydoclint>=0.8.6",
    "pytest-cov>=7.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "yamlfix>=1.19.1",
    "zizmor>=1.25.2",
    "ty>=0.0.49",
]

[build-system]
requires = ["hatchling>=1.30.1", "uv-dynamic-versioning>=0.14.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fluffless"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

# Flake8 Python linter - https://github.com/PyCQA/flake8
# Using a plugin to support pyproject.toml - https://github.com/john-hen/Flake8-pyproject
[tool.flake8]
max-line-length = 120

extend-ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "CCE001",  # Wrong class attributes order
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    "D210",    # No whitespaces allowed surrounding docstring text
    "DOC601",  # Class docstring contains fewer class attributes than actual class attributes.
    "DOC603",  # Class docstring attributes are different from actual class attributes.
]

# Pydoclint config
style = "google"

# Consider fluffless and tests as local packages
import-order-style = "edited"
application-import-names = [
    "fluffless",
    "tests",
]

# Ruff Python linter - https://github.com/astral-sh/ruff
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Enable all linting initially, then disable specific rules and rulesets.
select = ["ALL"]

ignore = [
    # Disable whole sets of rules
    "EM",  # flake8-errmsg
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "TD",  # flake8-todos

    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed

    "C901", # Structure is too complex

    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D210", # No whitespaces allowed surrounding docstring text

    "FIX002", # Line contains TODO, consider resolving the issue

    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison

    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF013", # PEP 484 prohibits implicit optional

    "SLF001", # Private member accessed

    "TC006", # Add quotes to type expression in `typing.cast()`

    "TRY003", # Avoid specifying long messages outside the exception class

    "UP024", # Replace aliased errors with `OSError`
    "UP035", # Import from {target} instead: {names}
]

[tool.ruff.lint.isort]
# Enforces consistency with flake8 isort config
# See https://docs.astral.sh/ruff/settings/#lintisort
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"

# Markdown auto-formatter - https://github.com/jackdewinter/pymarkdown
[tool.pymarkdown]
plugins.line-length.enabled = true
plugins.no-inline-html.enabled = true
plugins.first-line-heading.enabled = true
plugins.no-blanks-blockquote = true

plugins.list-marker-space.enabled = true
plugins.list-marker-space.ul_single = 3
plugins.list-marker-space.ul_multi = 3
plugins.list-marker-space.ol_single = 2
plugins.list-marker-space.ol_multi = 2

plugins.ul-indent.indent = 4

# YAML auto-formatter - https://lyz-code.github.io/yamlfix/
[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
indent_mapping = 4
indent_offset = 0
indent_sequence = 4
explicit_start = false
preserve_quotes = true
